# block_chain_Uniminuto

./: .gitignore  pyproject.toml
block_chain_api/: api.py
block_chain_api/core/: api.py
block_chain_api/interfaces/: blockchain.py  coordinator.py  minero.py  register.py
block_chain_api/shared/: models.py  request.py  schema.py
block_chain_api/utils/: parser.py  utils.py
tests/: test_block_chain_api.py
